(ui) some fixes

--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -23,14 +23,14 @@
     "Backstory.Age": "Idade",
     "Backstory.Bio": "História e Aparência",
     "Attributes.Description": "Distribua os pontos de atributo do seu personagem. Os valores base do sistema Daemon variam de 1 a 20, mas o mestre pode definir outros limites.",
-    "Attributes.PointsTitle": "Pontos de Atributo Restantes",
-    "Aprimoramentos.DescriptionManual": "Adicione manualmente as Vantagens e Desvantagens do seu personagem. Insira o nome e o custo, e o sistema calculará os pontos restantes.",
-    "Aprimoramentos.PointsTitle": "Pontos de Aprimoramento Restantes",
-    "Aprimoramentos.Vantagens": "Vantagens",
-    "Aprimoramentos.Desvantagens": "Desvantagens",
+    "Attributes.PointsTitle": "Pontos de Atributo",
+    "Aprimoramentos.DescriptionManual": "Adicione manualmente os Aprimoramentos Positivos e Negativos do seu personagem. Insira o nome e o custo, e o sistema calculará os pontos disponíveis.",
+    "Aprimoramentos.PointsTitle": "Pontos de Aprimoramento",
+    "Aprimoramentos.Vantagens": "Positivos",
+    "Aprimoramentos.Desvantagens": "Negativos",
     "Pericias.DescriptionManual": "Distribua os pontos de perícia para definir as habilidades do seu personagem. A perícia 'Briga' é automática. Adicione outras perícias manualmente, lembrando que o gasto mínimo em uma nova perícia é 10 pontos.",
-    "Pericias.PointsTitle": "Pontos de Perícia Restantes",
-    "PericiasCombate.Description": "Use seus pontos de perícia restantes para aprimorar suas capacidades de combate. Lembre-se que cada perícia de combate tem valores de ataque e defesa separados.",
+    "Pericias.PointsTitle": "Pontos de Perícia",
+    "PericiasCombate.Description": "Use seus pontos de perícia para aprimorar suas capacidades de combate. Lembre-se que cada perícia de combate tem valores de ataque e defesa separados.",
     "PVsIP.Description": "Aqui estão os seus atributos de sobrevivência calculados com base nos seus atributos. O IP aumentará conforme equipar armaduras.",
     "PVsIP.PontosDeVida": "Pontos de Vida (PV)",
     "PVsIP.IndiceDeProtecao": "Índice de Proteção (IP)",
